# clickerV2

./: .cproject  .gitignore  .mxproject  .project  CMakeCache.txt  CMakeLists.txt  LICENSE  README.md  STM32F407VGTX_FLASH.ld  __CMakeLists.txt  clickerV2.ioc  clickerV2.launch  gcc_cmd.txt  mx.scratch
Core/Inc/: main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h
Core/Src/: main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
cmake_generated/: cmake_generated.cmake
